    - Ticket #166 and #167 - The command 'watch' watches the app.pl file as well as all files or dirs
      that are stated in '-w' command line switch

0.0.6 2017.6.27
    - Ticket #147 - no test output for t/08-* testcases
    - Added a test case for bailador watch command
    - Added Bailador::Commands for
        * tiny (HTTP::Server::Tiny)
        * easy (HTTP::Easy)
        * ogre (HTTP::Server::Ogre), which is an exprimental and new async P6W server and
        * routes, which prints out all routes of your application. (Ticket #165)
    - Ticket #107 and #137 - Log::Any can be used for logging. p6w.errors will be used ad default out
    - Add example/api.pl6 to demonstrate returning JSON.
    - Add test to skeleton created by --new, move application to bin/.
    - Add experimental code, example, and test for gradual serving. #120
    - Change the way 'bailador --new" accepts its parameter. Eliminate duplicate usage. #156.

0.0.5 2017.06.16
    - Ticket #158 - passing perl6 include lib directory downstream
    - Ticket #148 - bailador command line tool can read out --config options
    - Ticket #142 - views directory is now configurable
    - Bailador can now use a settings yaml file
    - Introduced Bailador::Comamnd::watch which can be used via the bailador comand line tool
    - Including some other smaller documentation changes, bugfixes and additions

0.0.4 2017.06.10
    First release to CPAN

0.0.3 2017.06.03

0.0.2 2017.05.31

0.0.1 2017.05.28
