@@ -35,8 +35,8 @@ my $app = MyOwnWebApp.new;
 is-deeply get-psgi-response($app, 'GET',  '/foo'),  [200, ["Content-Type" => "text/html"], 'foo text'],       'route GET /foo returns content';
 is-deeply get-psgi-response($app, 'POST', '/bar'),  [200, ["Content-Type" => "text/html"], 'peti bar'],       'route POST /bar returns content';
 
-is-deeply get-psgi-response($app, 'POST', '/foo'),  [404, ["Content-Type" => "text/html, charset=utf-8"], 'Not found'],      'route POST /foo not found';
-is-deeply get-psgi-response($app, 'GET',  '/bar'),  [404, ["Content-Type" => "text/html, charset=utf-8"], 'Not found'],      'route GET /bar not found';
+is-deeply get-psgi-response($app, 'POST', '/foo'),  [404, ["Content-Type" => "text/html;charset=UTF-8"], 'Not found'],      'route POST /foo not found';
+is-deeply get-psgi-response($app, 'GET',  '/bar'),  [404, ["Content-Type" => "text/html;charset=UTF-8"], 'Not found'],      'route GET /bar not found';
 
 is-deeply get-psgi-response($app, 'GET',  '/params/bar'),   [200, ["Content-Type" => "text/html"], 'a happy bar'],       'route GET /params/bar returns content';
 is-deeply get-psgi-response($app, 'GET',  '/regexes/bar'),  [200, ["Content-Type" => "text/html"], 'a happy bar'],       'route GET /regexes/bar returns content';
